--- a/styles/main.css
+++ b/styles/main.css
@@ -167,6 +167,7 @@ h3,
 h4 {
   margin-bottom: 0.5em;
   margin-top: 1em;
+  text-align: center;
 }
 
 p {
@@ -232,4 +233,8 @@ svg {
 .card {
   padding: 1rem;
   flex: 1 1 0;
+}
+
+.pic {
+  align-items: flex-end;
 }
